Wed Aug 16 23:43:44 2000 Pablo Saratxaga <pablo@mandrakesoft.com>

	* panel.hints: added Greek strings from Simos Xenitellis

Wed Aug 16 02:03:46 2000  George Lebl <jirka@5z.com>

	* foobar-widget.[ch], menu.c, session.c:  Make sure that foobar's
	  menus are reread if the menu settings change by setting a data on
	  them a cleaner solution should be done sometime in the future, but
	  this works.  Apparently tradeshows and miguel trying to use the
	  panel in a booth reveals bugs in software.

Wed Aug 16 00:10:21 2000  George Lebl <jirka@5z.com>

	* panel.c: accept property/bgimage mimetype so that we can get the
	  bgimage drops from nautilus

Fri Aug 11 18:11:40 2000  George Lebl <jirka@5z.com>

	* title-item.[ch]: recompiled with new gob

Fri Aug 11 16:40:41 2000  George Lebl <jirka@5z.com>

	* gnome-panel-properties.c, panel_config_global.h, session.c,
	  menu-fentry.[ch]:  add a configuration option that can disable
	  menu merging.

	* menu.c:  Fix a crash on saving state of tornoff menus that point
	  at directories which have been reread

Fri Aug 11 13:58:20 2000  George Lebl <jirka@5z.com>

	* main.c, menu.c, menu-fentry.[ch]: add menu merging ala redhat.
	  (from /etc/X11/applnk/).  This was a very long time in coming to
	  prevent ugly distribution specific patches.

2000-08-10  Dan Mueth <d-mueth@uchicago.edu>

	* help/C/figures/example_menu.png: fixed screenshot

2000-04-24  Martin Baulig  <baulig@suse.de>

	Improved handling of distribution specific menus.

	Rather than providing code for RH and Debian menus, we now
	have some generic "distribution menu" code - all customizing
	is done in a `DistributionInfo' array in distribution.c.

	This makes it very easy for distribution vendors to add a
	custom menu for their distribution (like the already existent
	AnotherLevel and Debian menus) with a about-10-line-change
	in a single source file.

	* distribution.h: New file.
	(DistributionType): Contains all possible Linux distributions.