@@ -1,3 +1,10 @@
+Mon Aug 21 21:06:03 2000  George Lebl <jirka@5z.com>
+
+	* menu-properties.c, menu.[ch], panel.c, session.c: Add a global_main
+	  flag to main menus.  this will make it use the global main setup.
+	  this is the default.  This is since it is more logical for the
+	  main menu to use the setup from crapplet.
+
 Wed Aug 16 23:43:44 2000 Pablo Saratxaga <pablo@mandrakesoft.com>
 
 	* panel.hints: added Greek strings from Simos Xenitellis
